ScriptRepo/logs/_10692_2024111455741.log
[14/Nov/2024 00:57:43] "GET /ScriptRepository/ HTTP/1.1" 200 4935
[14/Nov/2024 00:57:43] "GET /ScriptRepository/media/profile_pics/avatar_7NeMSla.png HTTP/1.1" 404 179
[14/Nov/2024 00:57:46] "GET /ScriptRepository/ HTTP/1.1" 200 4935
[14/Nov/2024 00:57:46] "GET /ScriptRepository/media/profile_pics/avatar_7NeMSla.png HTTP/1.1" 404 179
Performing system checks...

System check identified no issues (0 silenced).
November 14, 2024 - 00:57:43
Django version 4.2.16, using settings 'ScriptRepo.settings'
Starting development server at http://127.0.0.1:15649/
Quit the server with CTRL-BREAK.

Traceback (most recent call last):
  File "C:\inetpub\wwwroot\ScriptRepo\ScriptRepo\manage.py", line 22, in <module>
    main()
    ~~~~^^
  File "C:\inetpub\wwwroot\ScriptRepo\ScriptRepo\manage.py", line 18, in main
    execute_from_command_line(sys.argv)
    ~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "C:\Python313\Lib\site-packages\django\core\management\__init__.py", line 442, in execute_from_command_line
    utility.execute()
    ~~~~~~~~~~~~~~~^^
  File "C:\Python313\Lib\site-packages\django\core\management\__init__.py", line 382, in execute
    settings.INSTALLED_APPS
  File "C:\Python313\Lib\site-packages\django\conf\__init__.py", line 102, in __getattr__
    self._setup(name)
    ~~~~~~~~~~~^^^^^^
  File "C:\Python313\Lib\site-packages\django\conf\__init__.py", line 89, in _setup
    self._wrapped = Settings(settings_module)
                    ~~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\Python313\Lib\site-packages\django\conf\__init__.py", line 217, in __init__
    mod = importlib.import_module(self.SETTINGS_MODULE)
  File "C:\Python313\Lib\importlib\__init__.py", line 88, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 1018, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1156, in get_code
  File "<frozen importlib._bootstrap_external>", line 1086, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "C:\inetpub\wwwroot\ScriptRepo\ScriptRepo\ScriptRepo\settings.py", line 132
    MEDIA_ROOT = 'C:\\inetpub\\wwwroot\\ScriptRepo\\ScriptRepo\\media\'
                 ^
SyntaxError: unterminated string literal (detected at line 132); perhaps you escaped the end quote?
